packages/next-swc/crates/core/tests/errors/server-actions/client-graph/1/output.js
/* __next_internal_client_entry_do_not_use__ default auto */ /* __next_internal_action_entry_do_not_use__ $$ACTION_0 */ export default function App() {
    async function fn() {
        return $$ACTION_0(fn.$$bound);
    }
    fn.$$typeof = Symbol.for("react.server.reference");
    fn.$$id = "6d53ce510b2e36499b8f56038817b9bad86cabb4";
    fn.$$bound = null;
    return <div>App</div>;
}
export async function $$ACTION_0(closure) {}
